--- a/gallery-client/src/components/PhotoCard/style.css
+++ b/gallery-client/src/components/PhotoCard/style.css
@@ -1,15 +1,25 @@
 .photo-card {
     width: 200px;
-    background-color: gray;
+    background-color: lightblue;
+    border: .4em silver solid;
+    border-radius: 5px;
 }
 
 img {
     width: 200px;
-
 }
 
 .tags {
     padding: 5px;
     display: flex;
     gap: 5px;
+}
+
+.title {
+    font-size: 1.2em;
+    padding-left: 0.2em;
+}
+.desc {
+    font-size: 0.9em;
+    padding-left: 0.2em;
 }
