--- a/gallery-client/src/components/PhotoCard/style.css
+++ b/gallery-client/src/components/PhotoCard/style.css
@@ -27,3 +27,43 @@ img {
 li {
     cursor: pointer;
 }
+
+
+dialog {
+    width: 300px;
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background: white;
+    text-align: center;
+}
+
+dialog::backdrop {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+
+li:hover {
+    background: #ddd;
+}
+
+button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: #007bff;
+    color: white;
+}
+
+button:hover {
+    background: #0056b3;
+}
