--- a/gallery-client/src/index.css
+++ b/gallery-client/src/index.css
@@ -1,7 +1,8 @@
 * {
-  margin:0;
-  
+  margin: 0;
+
 }
+
 .flex-column {
   display: flex;
   flex-direction: column;
@@ -12,12 +13,53 @@
   justify-content: center;
   align-items: center;
 }
+
 .page {
-  background-color: slategray;
+  background-color: lightslategray;
   width: 100vw;
   height: 100vh;
 }
 
 .marign {
   margin: 5px;
+}
+
+.floating-button {
+  position: fixed;
+  bottom: 50px;
+  /* Adjust for spacing from bottom */
+  right: 50px;
+  /* Adjust for spacing from right */
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  /* Makes it circular */
+  width: 50px;
+  height: 50px;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.dialog-overlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.dialog {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  min-width: 300px;
 }
